--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jbdc:postgresql://localhost:5432/postgres
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.dll-auto=
+spring.datasource.url=jdbc:postgresql://localhost:5432/pancherasargentina
+spring.datasource.username=postgres
+spring.datasource.password=riverpasion10
+spring.jpa.hibernate.dll-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
