--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pancherasargentina
 spring.datasource.username=postgres
 spring.datasource.password=riverpasion10
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.dll-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
