--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=riverpasion10
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.dll-auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
