--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.hibernate.dll-auto=create-drop
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=facundoacostayl@gmail.com
+spring.mail.password=cpzhorlolvbusixq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
